# goit-python-web-hw4

./: .gitignore  README.md  app.py  error.html  http_handler.py  index.html  main.py  message.html  pyproject.toml  sock_client.py  sock_server.py
socket_app/: __init__.py  sock_client.py  sock_server.py
static/css/: style.css
storage/: data.json
templates/: error.html  index.html  message.html
